--- a/adminApp/src/components/TeamSelector.css
+++ b/adminApp/src/components/TeamSelector.css
@@ -1,4 +1,31 @@
 .logo {
-    width: 75%;
+    width: 30%;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15%;
+}
+
+.spinner {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.name {
+    text-align: center
+}
+.sub {
+    padding-top: 50px;
+    text-align: center;
+}
+
+.sub2{
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.center{
+    text-align: center;
 }
